browser/css/lool.css
/* ... */
.lool-annotation-content-wrapper,
.lool-annotation-redline-content-wrapper {
	padding: 8px;
	font-family: var(--lool-font) !important;
	font-size: var(--default-font-size);
	text-align: left;
	background-color: var(--color-background-lighter);
	box-shadow: 0 0 3px var(--color-box-shadow);
	color: var(--color-main-text);
	border: none;
	border-radius: var(--border-radius);
	width: auto;
}

.lool-annotation:not(.annotation-active) .lool-annotation-content-wrapper:hover,
.lool-annotation:not(.annotation-active)
	.lool-annotation-redline-content-wrapper:hover {
	color: var(--color-text-dark);
}

.annotation-active.modify-annotation-container .lool-annotation-content-wrapper,
.annotation-active.reply-annotation-container .lool-annotation-content-wrapper {
	width: auto;
}

.lool-annotation-content {
	margin: 3px;
	line-height: 1.4;
	max-height: var(--annotation-input-size);
	overflow: auto;
}

.lool-annotation-info-collapsed {
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 0;
	padding: 0;
	background-color: var(--color-primary);
	color: var(--color-primary-text);
	font-weight: bold;
	font-family: var(--lool-font);
	font-size: var(--default-font-size);
	border: 1px solid var(--color-primary);
	border-radius: 50%;
	z-index: 10;
	position: relative;
	width: var(--btn-size-s);
	height: var(--btn-size-s);
	left: -6px;
	top: -15px;
}

.tracked-deleted-comment-show .lool-annotation-menubar {
	display: none;
}

#main-document-content {
	z-index: 0;
	display: flex;
	flex-direction: row;
	flex: 1;
	margin: 0;
	padding: 0;
	min-height: 0;
}

.lool-annotation-collapsed-show .lool-annotation-img {
	visibility: visible;
}

.lool-dont-break {
	/* These are technically the same, but use both */
	overflow-wrap: break-word;
	word-wrap: break-word;

	/* Don't eat new lines  */
	white-space: pre-wrap;

	/* Adds a hyphen where the word breaks, if supported (No Blink) */
	-ms-hyphens: auto;
	-moz-hyphens: auto;
	-webkit-hyphens: auto;
	hyphens: auto;
}

.lool-annotation-content-author {
	margin: 0;
	margin-top: 2px;
	height: 18px;
}

.lool-annotation-content-resolved {
	color: var(--color-success);
}

.lool-annotation-edit {
	margin: 3px;
	line-height: 1.4;
}

.lool-annotation-textarea {
	font-family: var(--lool-font) !important;
	font-size: var(--default-font-size);
	border: 1px solid var(--color-border);
	background-color: var(--color-background-dark);
	color: var(--color-main-text);
	overflow-x: hidden;
	padding: 2px;
	height: 54px;
	width: 100%;
	box-sizing: border-box;
}

.lool-annotation-textarea a:link,
.lool-annotation-textarea a:visited,
.lool-annotation-content a:link,
.lool-annotation-content a:visited {
	color: var(--color-hyperlink);
}

#input-modal-input.lool-annotation-textarea {
	height: var(--annotation-input-size);
}

.lool-div-layer {
	position: absolute;
	left: 0;
	top: 0;
}

.lool-annotation-table {
	border-spacing: 0;
	border-collapse: separate;
	white-space: nowrap;
	width: 100%;
}

.lool-annotation-img {
	box-sizing: content-box !important;
	max-width: 32px;
	display: inline-block;
	border: solid 2px;
	border-radius: 50%;
	height: 32px;
	width: 32px;
	padding: 0;
	opacity: 0.9;
}

.lool-annotation.collapsed-comment .lool-annotation-img:hover {
	cursor: pointer;
	opacity: 1;
	box-shadow: 0px 4px 10px var(--color-box-shadow);
}

.lool-annotation-img .avatar-img {
	border: none;
}
.lool-annotation-img > .avatar-img {
	display: block;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	width: 32px; /* Width of new image */
	height: 32px; /* Height of new image */
	background: url('images/user.svg') center 3px no-repeat;
}

.leaflet-container .leaflet-pane.leaflet-calc-background-pane {
	z-index: 0;
}

.avatar-img {
	border: solid 2px;
	border-radius: 50%;
}

.user-info {
	border-radius: 50%;
	width: var(--btn-size);
	height: var(--btn-size);
	overflow: auto;
	margin: auto;
}

.lool-annotation-author {
	padding-left: 10px;
	padding-right: 10px;
	vertical-align: top;
	display: table-cell;
	width: 100%;
	overflow: hidden;
	max-width: 110px;
}

.lool-annotation-menu,
.lool-annotation-menu-redline,
.lool-redline-accept-button,
.lool-redline-reject-button {
	margin: 0 !important;
	padding: 0 !important;
	min-width: initial !important;
	width: var(--btn-size) !important;
	height: var(--btn-size) !important;
	vertical-align: top;
	border: 1px solid transparent !important;
	display: inline-block !important;
}

.lool-redline-accept-button {
	background: url('images/lc_acceptchanges.svg') no-repeat center !important;
}

.lool-redline-reject-button {
	background: url('images/lc_rejecttrackedchange.svg') no-repeat center !important;
}

.lool-annotation-menu,
.lool-annotation-menu-redline {
	background: url('images/submenu.svg') no-repeat center/contain !important;
}

.lool-annotation-menu:hover,
.lool-annotation-menu-redline:hover,
.lool-redline-accept-button:hover,
.lool-redline-reject-button:hover {
	border: 1px solid var(--color-border-darker);
}

.lool-annotation-date {
	font-size: var(--default-font-size);
}

.lool-annotation-autosavelabel {
	font-size: var(--default-font-size);
	opacity: 75%;
}

.lool-annotation-menubar {
	margin: 0;
	padding: 0;
	vertical-align: top;
}

.lool-annotation-child-line {
	border-style: none none dashed dashed;
	border-width: thin;
	border-color: black;
}
/*Tooltips
----------------------------------*/
[data-title]:hover:after {
	padding: 7px 9px;
	font-size: 1em;
	line-height: 1;
	opacity: 1;
	transition: all 0.1s ease 0.5s;
	visibility: visible;
}
[data-title]:after {
	content: attr(data-title);
	font-size: 1em !important;
	bottom: -1.6em;
	left: 100%;
	white-space: nowrap;
	opacity: 0;
	border-color: var(--color-border-darker);
	visibility: hidden;
}
.lool-ruler-left[data-title]:after,
.lool-ruler-right[data-title]:after {
	bottom: -2.8em;
	left: auto;
}

.lool-ruler.vruler {
	border-top: solid 1px var(--color-toolbar-border);
}
/* ... */

